--- a/app/views/shared/_good_delete.html.haml
+++ b/app/views/shared/_good_delete.html.haml
@@ -97,7 +97,7 @@
         .good_option_box__pause
           出品を一旦停止する
         .good_option_box__delete
-          = link_to "", class: "" do 
+          %h3.good_option_box__delete, onclick: "MoveCheck();"
             この商品を削除する
 
 
