--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,4 +9,6 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     %link{ crossorigin: "anonymous", href: "https://use.fontawesome.com/releases/v5.6.1/css/all.css", integrity: "sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP", rel: "stylesheet"}/
   %body
-    = yield
+    %nav.bread-container
+      = breadcrumbs pretext: "You are here: ", separator: " &rsaquo; "
+        = yield
