--- a/app/views/shared/_good_delete.html.haml
+++ b/app/views/shared/_good_delete.html.haml
@@ -97,7 +97,7 @@
         .good_option_box__pause
           出品を一旦停止する
         .good_option_box__delete
-            =link_to "#", do
+            =link_to good_path, do
               本当に削除しますか？
     .detail
     %ul.nav-link
