--- a/app/views/shared/_main_page_header.html.haml
+++ b/app/views/shared/_main_page_header.html.haml
@@ -1,4 +1,3 @@
--# 〜〜〜〜〜ここからヘッダー（上段）エリア〜〜〜〜〜
 .main-page-header-wrapper
   .header
     = form_with(class: 'header__main') do |f|
@@ -31,6 +30,7 @@
         .header__under__right
           .header__under__right__register-button
           - if user_signed_in? # このリンク仮置きだよ?
+            =current_user.username
             =link_to  mypage_path, class: 'header__under__right__register-button__mypage' do
               マイページ
             -# =link_to destroy_user_session_path, method: :delete, class: 'header__under__right__register-button__mypage' do
