add description contoroller

--- a/app/views/shared/_good_delete.html.haml
+++ b/app/views/shared/_good_delete.html.haml
@@ -97,8 +97,8 @@
         .good_option_box__pause
           出品を一旦停止する
         .good_option_box__delete
-            =link_to good_path, do
-              本当に削除しますか？
+          -# =link_to good_path, do
+            本当に削除しますか？
     .detail
     %ul.nav-link
     .social-box
