--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,4 +33,5 @@
 @import 'tag-master';
 @import 'purchase_completed';
 @import 'category_tree';
+@import 'good_delete';
 @import 'good_delete_popup';
