--- a/app/views/mypage/_exhibit.html.haml
+++ b/app/views/mypage/_exhibit.html.haml
@@ -3,3 +3,5 @@
   .put_up_goods-lists__list__text
     = exhibit.goods_name
     %i.fas.fa-chevron-right.put_up_goods-lists__list__text__icon
+  .put_up_goods-lists__list__status
+    出品中
