--- a/app/assets/stylesheets/_put_up_goods_on_sale.scss
+++ b/app/assets/stylesheets/_put_up_goods_on_sale.scss
@@ -109,7 +109,7 @@
     height:83px;
     width: 700px;
 
-  &__image{
+    &__image{
       margin: 18.5px ;
       display: inline-block;
       height:48px;
@@ -136,6 +136,19 @@
         font-size: 14px;
         color: #333;
       }
-    }    
+    }
+    &__status{
+      position: absolute;
+      top: 36px;
+      left: 90px;
+      font-weight: 600;
+      color: #fff;
+      background: #0099e8;
+      display: inline-block;
+      margin: 8px 0 0 0;
+      padding: 5px 6px;
+      border-radius: 2px;
+      font-size: 12px;
+    }
   }
 }
