--- a/app/views/shared/_product-details.html.haml
+++ b/app/views/shared/_product-details.html.haml
@@ -66,11 +66,11 @@
             %tr
               %th.category 配送料の負担
               %td 
-                = @good.delivery.parent.delivery_method
+                -# = @good.delivery.parent.delivery_method
             %tr
               %th.category 配送の方法
               %td 
-                = @good.delivery.delivery_method
+                -# = @good.delivery.delivery_method
               
             %tr
               %th.category 発送元地域
