--- a/app/assets/stylesheets/_good_delete.scss
+++ b/app/assets/stylesheets/_good_delete.scss
@@ -129,20 +129,29 @@
         height: 50px;
         background: red;
         color: white;
+        text-align: center;
+        font-size: 20px;
       
       }
       &__or {
         width: 262px;
         height: 16px;
+        font-size: 10px;
+        text-align: center;
       }
       &__pause {
         width: 668px;
         height: 50px;
+        font-size: 20px;
+        text-align: center;
         background: #eee;
+        margin: 10px 0;
       }
       &__delete {
         width: 668px;
         height: 50px;
+        font-size: 20px;
+        text-align: center;
         background: #eee;
       }
     }
