--- a/app/views/shared/_good_delete.html.haml
+++ b/app/views/shared/_good_delete.html.haml
@@ -91,14 +91,16 @@
           = @good.goods_description   #グッズテーブルの商品詳細カラムより引数
       .good_option_box
         .good_option_box__edit
-          商品を編集する
+          =link_to "#" do
+            商品を編集する
         .good_option_box__or
           or
         .good_option_box__pause
-          出品を一旦停止する
+          =link_to "#" do
+            出品を一旦停止する
         .good_option_box__delete
-          -# =link_to good_path, do
-            本当に削除しますか？
+          =link_to popup_path, method: :GET do
+            商品を削除する
     .detail
     %ul.nav-link
     .social-box
