--- a/app/views/shared/_good_delete_popup.html.haml
+++ b/app/views/shared/_good_delete_popup.html.haml
@@ -8,7 +8,7 @@
         一度削除された商品は二度と出品することができません。
     .goods_delete_popup__wrapper__alert_box__option
       %li.goods_delete_popup__wrapper__alert_box__option__cancel
-        =link_to good_path, method: :GET, class: "cancel-text" do
+        =link_to delete_page_path, class: "cancel-text" do
           キャンセル 
       %li.goods_delete_popup__wrapper__alert_box__option__delete
         =link_to good_path , method: :DELETE, class: "delete-text" do
