--- a/app/views/shared/_credit-enter.html.haml
+++ b/app/views/shared/_credit-enter.html.haml
@@ -1,4 +1,10 @@
 =render 'shared/main_page_header'
+.bread_crumbs
+  .bread_crumbs__line
+    -# config/breadcrumbs.rbに定義したmypageを呼び出し
+    - breadcrumb :credit_enter
+    -# 下記を記述した箇所にパンくずリストが表示される。
+    = breadcrumbs separator: "#{content_tag(:i, '', class: 'fas fa-chevron-right')}", class: "breadcrumbs-list"
 
 
 -# https://www.mercari.com/jp/mypage/card/ クレジット登録画面1
