--- a/app/views/shared/_logout.html.haml
+++ b/app/views/shared/_logout.html.haml
@@ -1,4 +1,10 @@
 =render 'shared/main_page_header'
+.bread_crumbs
+  .bread_crumbs__line
+    -# config/breadcrumbs.rbに定義したmypageを呼び出し9/28(YS&神山)
+    - breadcrumb :logout
+    -# 下記を記述した箇所にパンくずリストが表示される。9/28(YS&神山)
+    = breadcrumbs separator: "#{content_tag(:i, '', class: 'fas fa-chevron-right')}", class: "breadcrumbs-list"
 
 .logout-side-bar
   =render 'shared/profile-sidebar'
