--- a/app/views/shared/_make_sure_user_info.html.haml
+++ b/app/views/shared/_make_sure_user_info.html.haml
@@ -1,5 +1,11 @@
 .make-sure-user-info-wrapper
   = render 'shared/main_page_header'
+  .bread_crumbs
+    .bread_crumbs__line
+      -# config/breadcrumbs.rbに定義したmypageを呼び出し
+      - breadcrumb :make_sure_user
+      -# 下記を記述した箇所にパンくずリストが表示される。
+      = breadcrumbs separator: "#{content_tag(:i, '', class: 'fas fa-chevron-right')}", class: "breadcrumbs-list"
 
   .make-sure-user-info-wrapper__main-container
     = render 'shared/profile-sidebar'
