--- a/app/views/shared/_put_up_goods_on_sale.html.haml
+++ b/app/views/shared/_put_up_goods_on_sale.html.haml
@@ -1,4 +1,12 @@
 =render 'shared/main_page_header'
+.bread_crumbs
+  .bread_crumbs__line
+    -# config/breadcrumbs.rbに定義したmypageを呼び出し
+    - breadcrumb :put_up_goods_on_sale
+    -# 下記を記述した箇所にパンくずリストが表示される。
+    = breadcrumbs separator: "#{content_tag(:i, '', class: 'fas fa-chevron-right')}", class: "breadcrumbs-list"
+
+
 
 %main.put_up_goods_on_sale.clearfix
   =render 'shared/profile-sidebar'
