--- a/app/assets/stylesheets/_signup3.scss
+++ b/app/assets/stylesheets/_signup3.scss
@@ -1,6 +1,6 @@
 .signup3-wrapper{
-  height: 950px;
-  .contents {
+  height: 1080px;
+  &__contents {
     font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
     height: 100%;
     width: 560px;
@@ -29,8 +29,7 @@
       display: block;
       width: 300px;
       border-radius: 5px;
-      margin: 0 auto;
-      padding: 20px 20px 60px;
+      margin: 10px auto;
       font-size: 10px;
       color: black;
       text-decoration: none;
@@ -38,16 +37,51 @@
       &__title1 {
         font-size: 12px;
         position: relative;
-        label{
+        margin-bottom: 20px;
+        &__text{
           position: absolute;
-          left: 15px;
+          left: 10px;
+          font-weight: 600;
+        }
+        &__require{
+          margin: 0 0 0 75px;
+          padding: 3px 4px;
+          border-radius: 2px;
+          background-color: #ea352d;
+          color: #fff;
+          font-size: 10px;
+          text-decoration: none;
+          vertical-align: top;
+        }
+
+        &__require-gray{
+          margin: 0 0 0 75px;
+          padding: 3px 4px;
+          border-radius: 2px;
+          background-color: gray;
+          color: #fff;
+          font-weight: bold;
+          font-size: 10px;
+          text-decoration: none;
+          vertical-align: top;
         }
         #card-number-require{
           margin-right: 110px;
         }
+        &__input{
+          display: block;
+          margin: 0 auto;
+          border-radius: 5px;
+          height: 40px;
+          width: 280px;
+          padding: 10px 16px 8px;
+          border: 1px solid #ccc;
+          background: #fff;
+          font-size: 14px;
+        }
       }
+
       &__title {
-        
         font-size: 12px;
         font-weight: 600;
         position: relative;
@@ -83,7 +117,7 @@
       }
       &__input {
         display: block;
-        margin: 10px auto;
+        margin: 20px auto;
         border-radius: 5px;
         height: 20px;
         width: 250px;
@@ -123,4 +157,16 @@
       }
     }
   }
+}
+
+.signup3-contents__form__input {
+  display: block;
+  margin: 0 auto 15px;
+  border-radius: 5px;
+  height: 20px;
+  width: 250px;
+  padding: 10px 16px 8px;
+  border: 1px solid #ccc;
+  background: #fff;
+  font-size: 14px;
 }
