--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,4 +1,7 @@
-%h1 Products#index
-%p Find me in app/views/products/index.html.haml
+<img id="mypic" src="merucari_top1.png" width="100%" height="400">
+<input type="button" value="開始" onclick="start()">
 
-= link_to "商品詳細ページ", show_path, class: 'btn btn-default'
+-# <img id="mypic" src="user-bck_image.jpg" width="100%" height="400">
+-# ハムルの記述配下に
+-# %img#mypic{:height => "400", :src => "merucari_top1.png", :width => "100%"}/
+-# %input{:onclick => "start()", :type => "button", :value => "開始"}/
