--- a/app/views/shared/_top_page_middle.html.haml
+++ b/app/views/shared/_top_page_middle.html.haml
@@ -2,7 +2,8 @@
   .middle
     .middle__main
       .middle__main__slide
-        = image_tag '/merucari_top1.png', alt: "slidepage", class: "middle__main__slide__area"
+        %img#mypic{height: "400", src:  "キャンプ用品.jpg", width: "100%"}/
+        -# = image_tag '/merucari_top1.png', alt: "slidepage", class: "middle__main__slide__area"
       .middle__main__category
         %h2.middle__main__category__text
           人気のカテゴリー
