--- a/app/views/shared/_good_delete.html.haml
+++ b/app/views/shared/_good_delete.html.haml
@@ -95,7 +95,7 @@
           =link_to "#" do
             出品を一旦停止する
         .good_option_box__delete
-          =link_to popup_path, method: :GET do
+          =link_to good_delete_popup_good_path, method: :GET do
             商品を削除する
     .detail
     %ul.nav-link
