--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -2,48 +2,57 @@
   = render 'shared/login-header4'
 
 .signup4-wrapper
-  .contents
-    .contents__head
+  .signup4-wrapper__contents
+    .signup4-wrapper__contents__head
       支払い方法    
-      .contents__form__title1
-      =form_with(model: @card, url: complete_cards_path, method: :get,local: true) do |f|
-        %label カード番号
-        %span.contents__form__require#card-number-require 必須
-        = f.text_field :customer, class: "contents__form__input" , placeholder: '半角数字のみ'  
-        %ul.contents__form__cardlist
-          %li.icon
+    =form_with(model: @card, url: complete_cards_path, method: :get, local: true, class: 'signup4-wrapper__contents__title') do |f|
+      .signup4-wrapper__contents__title__main-contents
+        =f.label  class:'signup4-wrapper__contents__title__main-contents__label' do
+          カード番号
+        %span.signup4-wrapper__contents__title__main-contents__require
+          必須
+        = f.text_field :customer, class: "signup4-wrapper__contents__title__main-contents__input" , placeholder: '半角数字のみ'  
+        %ul.signup4-wrapper__contents__title__main-contents__card-list
+          %li.signup4-wrapper__contents__title__main-contents__card-list__icon
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/visa.svg?2482339763', height: "15", width: "40"
-          %li.icon
+          %li.signup4-wrapper__contents__title__main-contents__card-list__icon
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/master-card.svg?2482339763', height: "15", width: "40"
-          %li.icon
+          %li.signup4-wrapper__contents__title__main-contents__card-list__icon
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/saison-card.svg?2482339763', height: "15", width: "25"
-          %li.icon
+          %li.signup4-wrapper__contents__title__main-contents__card-list__icon
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/jcb.svg?2482339763', height: "15", width: "37"
-          %li.icon
+          %li.signup4-wrapper__contents__title__main-contents__card-list__icon
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/american_express.svg?2482339763', height: "15", width: "21"
-          %li.icon
+          %li.signup4-wrapper__contents__title__main-contents__card-list__icon
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/dinersclub.svg?2482339763', height: "15", width: "40"
-          %li.icon
+          %li.signup4-wrapper__contents__title__main-contents__card-list__icon
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/discover.svg?2482339763', height: "15", width: "21"
             
-        .contents__form__title
-          .credit-register-container__right__deadline
-            %label 有効期限
-            %span.contents__form__require 必須
-            .credit-register-container__right__deadline__list{ style:"display:inline-flex"}
-              = f.select :month, Test.months.keys.to_a, {} ,class: "credit-register-container__right__deadline__list__month"
-              %span 月
-              = f.select :year, Test.years.keys.to_a, {} ,class: "credit-register-container__right__deadline__list__year"
-              %sapn 年
+      .signup4-wrapper__contents__title__middle-contents
+        .signup4-wrapper__contents__title__middle-contents__deadline
+          =f.label class: 'signup4-wrapper__contents__title__middle-contents__deadline__text' do
+            有効期限
+          %span.signup4-wrapper__contents__title__middle-contents__deadline__require
+            必須
+          .signup4-wrapper__contents__title__middle-contents__deadline__list{ style:"display:inline-flex"}
+            = f.select :month, Test.months.keys.to_a, {} ,class: "signup4-wrapper__contents__title__middle-contents__deadline__list__month"
+            %span.signup4-wrapper__contents__title__middle-contents__deadline__list__month-text
+              月
+            = f.select :year, Test.years.keys.to_a, {} ,class: "signup4-wrapper__contents__title__middle-contents__deadline__list__year"
+            %sapn.signup4-wrapper__contents__title__middle-contents__deadline__list__year-text
+              年
 
-        .contents__form__title
-          %label セキュリティコード
-          %span.contents__form__require 必須
-          %input{ class:"contents__form__input", maxlength:"10", name:"card-name", placeholder:"カード背面4桁もしくは3桁の番号", type:"text", value:""}
-        .contents__info
-          %span.contents__info__question ？
-          %span カード裏面の番号とは？  
-          = f.submit '次に進む', class: 'contents__btn'
+      .signup4-wrapper__contents__title__low-contents
+        =f.label class:'signup4-wrapper__contents__title__low-contents__code' do
+          セキュリティコード
+        %span.signup4-wrapper__contents__title__low-contents__require
+          必須
+        = f.text_field :nil, class: 'signup4-wrapper__contents__title__low-contents__input',placeholder:"カード背面4桁もしくは3桁の番号"
+      .signup4-wrapper__contents__title__info
+        %i.fas.fa-question-circle.signup4-wrapper__contents__title__info__icon
+        %span.contents__info__question
+        %span カード裏面の番号とは？  
+        = f.submit '次に進む', class: 'contents__btn'
             
   %footer.confirmation-footer
     %ul.confirmation-footer-container
