--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -6,10 +6,13 @@
     .contents__head
       支払い方法    
       .contents__form__title1
-      =form_with(model: @card, url: complete_cards_path, method: :get,local: true) do |f|
+      = form_tag(pay_cards_path, method: :post, id: 'charge-form',  name: "inputForm") do
+
         %label カード番号
         %span.contents__form__require#card-number-require 必須
-        = f.text_field :customer, class: "contents__form__input" , placeholder: '半角数字のみ'  
+        = text_field_tag "number", "", class: "contents__form__input", placeholder: "半角数字のみ" ,maxlength: "16", type: "text", id: "card_number"
+
+        -# = f.text_field :customer, class: "contents__form__input" , placeholder: '半角数字のみ'  
         %ul.contents__form__cardlist
           %li.icon
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/visa.svg?2482339763', height: "15", width: "40"
@@ -31,19 +34,51 @@
             %label 有効期限
             %span.contents__form__require 必須
             .credit-register-container__right__deadline__list{ style:"display:inline-flex"}
-              = f.select :month, Test.months.keys.to_a, {} ,class: "credit-register-container__right__deadline__list__month"
-              %span 月
-              = f.select :year, Test.years.keys.to_a, {} ,class: "credit-register-container__right__deadline__list__year"
-              %sapn 年
+            %select#exp_month{name: "exp_month", type: "text", class: "credit-register-container__right__deadline__list__month"}
+              %option{value: ""} --
+              %option{value: "1"}01
+              %option{value: "2"}02
+              %option{value: "3"}03
+              %option{value: "4"}04
+              %option{value: "5"}05
+              %option{value: "6"}06
+              %option{value: "7"}07
+              %option{value: "8"}08
+              %option{value: "9"}09
+              %option{value: "10"}10
+              %option{value: "11"}11
+              %option{value: "12"}12
+            %p.date 月
+            %select#exp_year{name: "exp_year", type: "text", class: "credit-register-container__right__deadline__list__year"}
+              %option{value: ""} --
+              %option{value: "2019"}19
+              %option{value: "2020"}20
+              %option{value: "2021"}21
+              %option{value: "2022"}22
+              %option{value: "2023"}23
+              %option{value: "2024"}24
+              %option{value: "2025"}25
+              %option{value: "2026"}26
+              %option{value: "2027"}27
+              %option{value: "2028"}28
+              %option{value: "2029"}29
+            %p.date 年
+            -#   = f.select :month, Test.months.keys.to_a, {} ,class: "credit-register-container__right__deadline__list__month"
+            -#   %span 月
+            -#   = f.select :year, Test.years.keys.to_a, {} ,class: "credit-register-container__right__deadline__list__year"
+            -#   %sapn 年
 
         .contents__form__title
           %label セキュリティコード
           %span.contents__form__require 必須
-          %input{ class:"contents__form__input", maxlength:"10", name:"card-name", placeholder:"カード背面4桁もしくは3桁の番号", type:"text", value:""}
+          = text_field_tag "cvc", "", class: "cvc", placeholder: "カード背面3~4桁の番号", maxlength: "4", id: "cvc", class: 'contents__form__input'
+          -# %input{ class:"contents__form__input", maxlength:"10", name:"card-name", placeholder:"カード背面4桁もしくは3桁の番号", type:"text", value:""}
         .contents__info
           %span.contents__info__question ？
-          %span カード裏面の番号とは？  
-          = f.submit '次に進む', class: 'contents__btn'
+          %span カード裏面の番号とは？
+          #card_token
+          = submit_tag "追加する", id: "token_submit", class: 'contents__btn'
+          -# = f.submit '次に進む', class: 'contents__btn'
             
   %footer.confirmation-footer
     %ul.confirmation-footer-container
