--- a/app/assets/stylesheets/_signup5.scss
+++ b/app/assets/stylesheets/_signup5.scss
@@ -84,3 +84,34 @@
     }
   }
 }
+
+.signup5-wrapper{
+    &__contents{
+      background-color: #fff;
+      margin: 20px 440px 20px;
+      &__head{
+        padding-top: 20px;
+        font-size: 22px;
+        font-weight: 600;
+        text-align: center;
+        height: 50px;
+        border-bottom: 1px solid #eee;
+      }
+      &__form{
+        display: block;
+        width: 300px;
+        border-radius: 5px;
+        margin: 0 auto;
+        padding: 20px 20px 60px;
+        color: black;
+        text-decoration: none;
+        line-height: 40px;
+        text-align: center;
+
+        &__title{
+          font-size: 16px;
+        }
+
+      }
+    }
+}
