--- a/app/views/cards/complete.html.haml
+++ b/app/views/cards/complete.html.haml
@@ -1,12 +1,12 @@
 .login-header-wrapper
   = render 'shared/login-header5'
 
-.signup4-wrapper
-  .contents
-    .contents__head
+.signup5-wrapper
+  .signup5-wrapper__contents
+    .signup5-wrapper__contents__head
       会員登録完了
-    .contents__form
-      .contents__form__title1
+    .signup5-wrapper__contents__form
+      .signup5-wrapper__contents__form__title
         %p 
         ありがとうございます。
         %br
