--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -5,46 +5,32 @@
   .signup4-wrapper__contents
     .signup4-wrapper__contents__head
       支払い方法    
-
       .contents__form__title1
-      = form_tag(pay_cards_path, method: :post, id: 'charge-form',  name: "inputForm") do
-
+      = form_tag(pay_cards_path, method: :post, id: 'charge-form',  name: "inputForm", class: 'signup4-wrapper__contents__title') do
         %label カード番号
         %span.contents__form__require#card-number-require 必須
-        = text_field_tag "number", "", class: "contents__form__input", placeholder: "半角数字のみ" ,maxlength: "16", type: "text", id: "card_number"
-
-        -# = f.text_field :customer, class: "contents__form__input" , placeholder: '半角数字のみ'  
+        = text_field_tag "number", "", class: "contents__form__input", placeholder: "半角数字のみ" ,maxlength: "16", type: "text", id: "card_number" 
         %ul.contents__form__cardlist
           %li.icon
-
-        -# =form_with(model: @card, url: complete_cards_path, method: :get, local: true, class: 'signup4-wrapper__contents__title') do |f|
-        -#   .signup4-wrapper__contents__title__main-contents
-        -#     =f.label  class:'signup4-wrapper__contents__title__main-contents__label' do
-        -#       カード番号
-        -#     %span.signup4-wrapper__contents__title__main-contents__require
-        -#       必須
-        -#     = f.text_field :customer, class: "signup4-wrapper__contents__title__main-contents__input" , placeholder: '半角数字のみ'  
-        -#     %ul.signup4-wrapper__contents__title__main-contents__card-list
-        -#       %li.signup4-wrapper__contents__title__main-contents__card-list__icon
-
-        -#         = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/visa.svg?2482339763', height: "15", width: "40"
-        -#       %li.signup4-wrapper__contents__title__main-contents__card-list__icon
-        -#         = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/master-card.svg?2482339763', height: "15", width: "40"
-        -#       %li.signup4-wrapper__contents__title__main-contents__card-list__icon
-        -#         = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/saison-card.svg?2482339763', height: "15", width: "25"
-        -#       %li.signup4-wrapper__contents__title__main-contents__card-list__icon
-        -#         = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/jcb.svg?2482339763', height: "15", width: "37"
-        -#       %li.signup4-wrapper__contents__title__main-contents__card-list__icon
-        -#         = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/american_express.svg?2482339763', height: "15", width: "21"
-        -#       %li.signup4-wrapper__contents__title__main-contents__card-list__icon
-        -#         = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/dinersclub.svg?2482339763', height: "15", width: "40"
-        -#       %li.signup4-wrapper__contents__title__main-contents__card-list__icon
-        -#         = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/discover.svg?2482339763', height: "15", width: "21"
+            = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/visa.svg?2482339763', height: "15", width: "40"
+          %li.signup4-wrapper__contents__title__main-contents__card-list__icon
+            = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/master-card.svg?2482339763', height: "15", width: "40"
+          %li.signup4-wrapper__contents__title__main-contents__card-list__icon
+            = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/saison-card.svg?2482339763', height: "15", width: "25"
+          %li.signup4-wrapper__contents__title__main-contents__card-list__icon
+            = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/jcb.svg?2482339763', height: "15", width: "37"
+          %li.signup4-wrapper__contents__title__main-contents__card-list__icon
+            = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/american_express.svg?2482339763', height: "15", width: "21"
+          %li.signup4-wrapper__contents__title__main-contents__card-list__icon
+            = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/dinersclub.svg?2482339763', height: "15", width: "40"
+          %li.signup4-wrapper__contents__title__main-contents__card-list__icon
+            = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/discover.svg?2482339763', height: "15", width: "21"
             
 
-        .contents__form__title
-          .credit-register-container__right__deadline
-            %label 有効期限
+        .signup4-wrapper__contents__title__middle-contents
+          .signup4-wrapper__contents__title__middle-contents__deadline
+            %label.signup4-wrapper__contents__title__middle-contents__deadline__text
+              有効期限
             %span.contents__form__require 必須
             .credit-register-container__right__deadline__list{ style:"display:inline-flex"}
             %select#exp_month{name: "exp_month", type: "text", class: "credit-register-container__right__deadline__list__month"}
@@ -76,22 +62,17 @@
               %option{value: "2028"}28
               %option{value: "2029"}29
             %p.date 年
-            -#   = f.select :month, Test.months.keys.to_a, {} ,class: "credit-register-container__right__deadline__list__month"
-            -#   %span 月
-            -#   = f.select :year, Test.years.keys.to_a, {} ,class: "credit-register-container__right__deadline__list__year"
-            -#   %sapn 年
 
-        .contents__form__title
+        .signup4-wrapper__contents__title__low-contents
           %label セキュリティコード
           %span.contents__form__require 必須
           = text_field_tag "cvc", "", class: "cvc", placeholder: "カード背面3~4桁の番号", maxlength: "4", id: "cvc", class: 'contents__form__input'
-          -# %input{ class:"contents__form__input", maxlength:"10", name:"card-name", placeholder:"カード背面4桁もしくは3桁の番号", type:"text", value:""}
-        .contents__info
-          %span.contents__info__question ？
+        .signup4-wrapper__contents__title__info
+          %i.fas.fa-question-circle.signup4-wrapper__contents__title__info__icon
+          %span.contents__info__question 
           %span カード裏面の番号とは？
           #card_token
           = submit_tag "追加する", id: "token_submit", class: 'contents__btn'
-          -# = f.submit '次に進む', class: 'contents__btn'
 
       -# .signup4-wrapper__contents__title__middle-contents
       -#   .signup4-wrapper__contents__title__middle-contents__deadline
