--- a/app/views/cards/complete.html.haml
+++ b/app/views/cards/complete.html.haml
@@ -11,11 +11,11 @@
         ありがとうございます。
         %br
         会員登録が完了しました。
-      =link_to "/", class:"contents__btn" do
+      =link_to "/", class:"signup5-wrapper__contents__form__red-btn" do
         メルカリをはじめる
       
-      -# = f.button '次に進む', class:"contents__btn" 
-      -# ページのフッター部分
+
+  -# ページのフッター部分
   %footer.confirmation-footer
     %ul.confirmation-footer-container
       %li.confirmation-footer-container__list
