--- a/app/views/shared/_login-header5.html.haml
+++ b/app/views/shared/_login-header5.html.haml
@@ -1,9 +1,8 @@
 .login-header-wrapper
   .login-header-wrapper-header
     %h1
-      %a{href: "https://www.mercari.com/jp/"}
-        %img{alt: "mercari", src: "//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?2482339763",
-        width: 185, height: 49}
+      = link_to root_path do
+        =image_tag '/login-header-mercari.svg',width: 185, height: 49
     -# active_redは赤丸表示、afterはactiveより後（右側）の線を定義、beforeはactiveより前（左側）before_red after_redと定義すると赤色に変わるようにした。
     %nav.signup-bar
       %ol.clearfix
