--- a/app/assets/stylesheets/_top_page_middle.scss
+++ b/app/assets/stylesheets/_top_page_middle.scss
@@ -212,7 +212,7 @@
     &__moji {
       margin-top: 35px;
       font-size: 22px;
-
+      color: #fff;
     }
     .fas.fa-camera {
       font-size: 54px;
@@ -222,6 +222,7 @@
         max-height: 100%;
         display: block;
         margin: 5px auto 0px;
+        color: #fff;
     }
   }
 
