--- a/app/assets/stylesheets/_good_delete.scss
+++ b/app/assets/stylesheets/_good_delete.scss
@@ -118,43 +118,65 @@
       line-height: 1.5;
       &__inner {
         white-space: pre-wrap;
-        
       }
     }
     .good_option_box {
       width: 700px;
       height: 262px;
+      
       &__edit {
-        width: 668px;
-        height: 50px;
-        background: red;
+        cursor: pointer;
+        font-size: 24px;
+        display: block;
+        font-weight: 600;
+        margin-top: 16px;
+        background-color: #ea352d;
         color: white;
         text-align: center;
-        font-size: 20px;
-      
+        line-height: 60px;
+        text-decoration: initial;
+        &__text{
+          text-decoration: none;
+        }
+        
       }
       &__or {
-        width: 262px;
-        height: 16px;
-        font-size: 10px;
+        width: 100%;
+        height: 40px;
+        font-size: 22px;
         text-align: center;
+        line-height: 50px;
+
       }
       &__pause {
-        width: 668px;
-        height: 50px;
-        font-size: 20px;
+        cursor: pointer;
+        font-size: 24px;
+        display: block;
+        font-weight: 600;
+        margin-top: 16px;
+        background-color: #eee;
+        color: black;
         text-align: center;
-        background: #eee;
-        margin: 10px 0;
+        line-height: 60px;
+        text-decoration: initial;
       }
       &__delete {
-        width: 668px;
-        height: 50px;
-        font-size: 20px;
+        cursor: pointer;
+        font-size: 24px;
+        display: block;
+        font-weight: 600;
+        margin-top: 16px;
+        background-color: #eee;
+        color: black;
         text-align: center;
-        background: #eee;
+        line-height: 60px;
+        text-decoration: initial;
       }
     }
   }
 }
 
+a, a:visited, a:hover, a:active {
+  text-decoration: none;
+  color: inherit;
+}
