--- a/app/views/mypage/_exhibit.html.haml
+++ b/app/views/mypage/_exhibit.html.haml
@@ -1,4 +1,4 @@
-=link_to good_path(exhibit), class: 'put_up_goods-lists__list' do
+=link_to show_delete_good_path(exhibit), class: 'put_up_goods-lists__list' do
   = image_tag exhibit.images.first.goods_picture.url, size: "", alt: "buy-item-image" , class: 'put_up_goods-lists__list__image'
   .put_up_goods-lists__list__text
     = exhibit.goods_name
