--- a/app/assets/stylesheets/_test_products.scss
+++ b/app/assets/stylesheets/_test_products.scss
@@ -8,7 +8,7 @@
     background-color: #eee;
     .item-box {
       padding: 24px 40px 40px;
-      margin: 40px auto 0;
+      margin: 40px auto;
       width: 700px;
       background-color: white;
       &__name {
@@ -104,9 +104,8 @@
       line-height: 60px;
     }
     .item-description {
-      padding: 32px 0 0;
+      padding: 10px 0 0;
       font-size: 18px;
-      line-height: 1.5;
       &__inner {
         white-space: pre-wrap;
         
